--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
-DOMAIN_NAME=metaverse.peopleundercloud.com
+DOMAIN_NAME=vmetaverse.peopleundercloud.com
 
-REACT_APP_UNITY_BACKEND_DOMAN=metaverse.peopleundercloud.com/unity-backend
 REACT_APP_TARGET_VMEETING_DOMAIN=twon.vmeeting.kr
 REACT_APP_TARGET_VMEETING_TANENT=trial
